@@ -1,62 +1,57 @@
-import edu.wpi.first.toolchain.*
+import org.wpilib.toolchain.*
 
 plugins {
     id 'cpp'
     id 'java'
-    id 'java-library'
     id 'google-test'
-    id 'edu.wpi.first.wpilib.repositories.WPILibRepositoriesPlugin' version '2025.0'
-    id 'edu.wpi.first.NativeUtils' version '2026.0.1'
-    id 'edu.wpi.first.GradleJni' version '1.1.0'
-    id 'edu.wpi.first.GradleVsCode' version '2.1.0'
-    id 'com.diffplug.spotless' version '8.0.0'
-    id 'jacoco'
+    id 'org.wpilib.WPILibRepositoriesPlugin' version '2027.0.0'
+    id 'org.wpilib.NativeUtils' version '2027.10.0'
+    id 'org.wpilib.GradleJni' version '2027.0.0'
+    id 'org.wpilib.GradleVsCode' version '2027.0.0'
+    id 'com.diffplug.spotless' version '8.4.0'
 }
 
-ext.getCurrentArch = {
-    return NativePlatforms.desktop
-}
-
-def systemArch = getCurrentArch()
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
+// WPILib Version
+ext.wpilibVersion = "2027.+"
 
 repositories {
     mavenCentral()
 }
+wpilibRepositories.use2027Repos()
 if (project.hasProperty('releaseMode')) {
     wpilibRepositories.addAllReleaseRepositories(project)
 } else {
     wpilibRepositories.addAllDevelopmentRepositories(project)
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
+}
+var javaVersion = "25"
+
 // Apply C++ configuration
 apply from: 'config.gradle'
 
 // Apply Java configuration
 dependencies {
-    implementation 'edu.wpi.first.wpilibj:wpilibj-java:2026.1.1'
-    implementation 'edu.wpi.first.wpiutil:wpiutil-java:2026.1.1'
-    implementation 'edu.wpi.first.wpimath:wpimath-java:2026.1.1'
-    implementation 'edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:2026.1.1'
-    implementation 'edu.wpi.first.wpiunits:wpiunits-java:2026.1.1'
-    implementation 'edu.wpi.first.ntcore:ntcore-java:2026.1.1'
-    implementation 'edu.wpi.first.ntcore:ntcore-cpp:2026.1.1'
-    implementation 'edu.wpi.first.hal:hal-java:2026.1.1'
-
-    api "com.fasterxml.jackson.core:jackson-annotations:2.19.2"
-    api "com.fasterxml.jackson.core:jackson-core:2.19.2"
-    api "com.fasterxml.jackson.core:jackson-databind:2.19.2"
-
-    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation "org.wpilib.ntcore:ntcore-java:$wpilibVersion"
+    implementation "org.wpilib.wpilibj:wpilibj-java:$wpilibVersion"
+    implementation "org.wpilib.wpiutil:wpiutil-java:$wpilibVersion"
+    implementation "org.wpilib.wpimath:wpimath-java:$wpilibVersion"
+    implementation "org.wpilib.wpiunits:wpiunits-java:$wpilibVersion"
+    implementation "org.wpilib.hal:hal-java:$wpilibVersion"
+    implementation "org.wpilib.commandsv2:commandsv2-java:$wpilibVersion"
 
     // This is needed to use wpilibj Filesystem class
-    testImplementation 'edu.wpi.first.cscore:cscore-java:2026.1.1'
-    testImplementation 'edu.wpi.first.cameraserver:cameraserver-java:2026.1.1'
-    testImplementation 'edu.wpi.first.hal:hal-java:2026.1.1'
+    testImplementation "org.wpilib.cscore:cscore-java:$wpilibVersion"
+    testImplementation "org.wpilib.cameraserver:cameraserver-java:$wpilibVersion"
+
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.19.2"
+    implementation "com.fasterxml.jackson.core:jackson-core:2.19.2"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.19.2"
+
+    implementation "com.google.code.gson:gson:2.13.1"
 
     testImplementation 'us.hebi.quickbuf:quickbuf-runtime:1.4'
 
@@ -65,7 +60,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.4'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
-
 
 // Set up java tests
 test {
@@ -77,43 +71,52 @@ test {
     }
 }
 
-if (project.hasProperty('onlylinuxathena') || project.hasProperty('onlylinuxarm32') || project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64')) {
+if (project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64') || project.hasProperty('onlylinuxsystemcore')) {
     test.enabled = false
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add '-XDstringConcat=inline'
+    options.encoding = 'UTF-8'
+}
+
+// Setup Javadocs to link back to WPILib docs
+javadoc {
+    options {
+        links "https://docs.oracle.com/en/java/javase/$javaVersion/docs/api/", "https://github.wpilib.org/allwpilib/docs/release/java/"
+        addBooleanOption("Xdoclint:html,missing,reference,syntax", true)
+        addBooleanOption('html5', true)
+        addStringOption("charset", "utf-8")
+        addStringOption("docencoding", "utf-8")
+        addStringOption("encoding", "utf-8")
+        linkSource(true)
+        failOnError = true
+
+        title = "ChoreoLib API"
+
+        // Treat javadoc warnings as errors.
+        //
+        // The second argument '-quiet' is a hack. The one parameter
+        // addStringOption() doesn't work, so we add '-quiet', which is added
+        // anyway by gradle. See https://github.com/gradle/gradle/issues/2354.
+        options.addStringOption('Werror', '-quiet')
+    }
 }
 
 // Set up exports properly
 nativeUtils {
     exportsConfigs {
+        // Main library is just default empty. This will export everything
         ChoreoLib {
-            x86ExcludeSymbols = [
-                '_CT??_R0?AV_System_error',
-                '_CT??_R0?AVexception',
-                '_CT??_R0?AVfailure',
-                '_CT??_R0?AVruntime_error',
-                '_CT??_R0?AVsystem_error',
-                '_CTA5?AVfailure',
-                '_TI5?AVfailure',
-                '_CT??_R0?AVout_of_range',
-                '_CTA3?AVout_of_range',
-                '_TI3?AVout_of_range',
-                '_CT??_R0?AVbad_cast'
-            ]
-            x64ExcludeSymbols = [
-                '_CT??_R0?AV_System_error',
-                '_CT??_R0?AVexception',
-                '_CT??_R0?AVfailure',
-                '_CT??_R0?AVruntime_error',
-                '_CT??_R0?AVsystem_error',
-                '_CTA5?AVfailure',
-                '_TI5?AVfailure',
-                '_CT??_R0?AVout_of_range',
-                '_CTA3?AVout_of_range',
-                '_TI3?AVout_of_range',
-                '_CT??_R0?AVbad_cast'
-            ]
         }
     }
 }
+
+ext.getCurrentArch = {
+    return NativePlatforms.desktop
+}
+
+def systemArch = getCurrentArch()
 
 model {
     components {
@@ -141,8 +144,6 @@ model {
                 }
             }
 
-            nativeUtils.useRequiredLibrary(it, "wpilib_executable_shared", "googletest_static")
-
             binaries.all {
                 def arch = it.targetPlatform.name
                 if (systemArch == arch && it.buildType.name == 'debug') {
@@ -153,12 +154,10 @@ model {
                     test.workingDir filePath
                 }
             }
+
+            nativeUtils.useRequiredLibrary(it, "wpilib_shared", "googletest_static")
         }
     }
-}
-
-compileJava {
-    options.encoding = 'UTF-8'
 }
 
 spotless {
@@ -194,44 +193,23 @@ spotless {
     }
 }
 
-javadoc {
-    options.links("https://docs.oracle.com/en/java/javase/17/docs/api/")
-    options.links("https://github.wpilib.org/allwpilib/docs/release/java/")
-    options.addBooleanOption("Xdoclint:html,missing,reference,syntax", true)
-    options.addBooleanOption('html5', true)
-    options.addStringOption("charset", "utf-8")
-    options.addStringOption("docencoding", "utf-8")
-    options.addStringOption("encoding", "utf-8")
-    options.linkSource(true)
-    failOnError = true
-
-    title = "ChoreoLib API"
-
-    // Treat javadoc warnings as errors.
-    //
-    // The second argument '-quiet' is a hack. The one parameter
-    // addStringOption() doesn't work, so we add '-quiet', which is added
-    // anyway by gradle. See https://github.com/gradle/gradle/issues/2354.
-    options.addStringOption('Werror', '-quiet')
-}
-
-jacocoTestReport {
-    reports {
-        xml.required.set(true)
-    }
-}
-
 test {
     dependsOn cleanTest
 
     useJUnitPlatform()
     testLogging.showStandardStreams = true
 
-    finalizedBy jacocoTestReport
+    // For reflective access to continuation classes in unit tests
+    jvmArgs += [
+        "--add-opens",
+        "java.base/jdk.internal.vm=ALL-UNNAMED",
+        "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED",
+    ]
 }
 
 apply from: 'publish.gradle'
 
 wrapper {
-    gradleVersion = '8.14.3'
+    gradleVersion = '9.4.1'
 }
